# xorg-cursors

./: .gitignore  ChangeLog  Makefile.am  autogen.sh  configure.ac  genmakefile.sh
handhelds/: .gitignore  Makefile.cfg  Makefile.cursors
redglass/: COPYRIGHT  Makefile.cfg  Makefile.cursors
whiteglass/: .gitignore  COPYRIGHT  Makefile.cfg  Makefile.cursors
